# explosion_labs

./: README.md  combination.index  combination_documents.pkl  help_chat.index  help_chat_docments.pkl  main.py  my_faiss.index  pyproject.toml  test2.py  test_socket.py  vector_db.py
app/: main.py  test_service.py
app/common/: CombinationResultState.py  CombinationResultStateDetail.py  ElementSymbols.py  GameScenario.py  PlayerState.py
app/data/: combination_doc.jsonl  help_chat_doc.jsonl  znhcl_elem.jsonl
app/dto/: BaseRes.py  CombinationReq.py  CombinationRes.py  HelpChatReq.py
app/service/: HelpChatReq.py  ai_service.py  combination_service.py  contract.py  parser.py  prompts.py
