[project]
name = "explosion-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "openai>=1.109.1",
    "pymupdf>=1.26.4",
    "pymupdf4llm>=0.0.27",
    "tiktoken>=0.11.0",
    "unstructured[pdf]>=0.18.15",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
]
